--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,10 @@ dependencies {
     //注解
     implementation 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    implementation('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') {
+        exclude module: 'support-v4'
+    }
+    implementation files('libs/photoview-library-1.2.2.jar')
+    implementation files('libs/zxing.jar')
+    implementation files('libs/gson-2.3.1.jar')
 }
