--- a/vuandroidadsdk/src/main/AndroidManifest.xml
+++ b/vuandroidadsdk/src/main/AndroidManifest.xml
@@ -1,2 +1,15 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ydky.vuandroidadsdk" />
+<manifest
+package="com.ydky.vuandroidadsdk"
+xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <application
+    android:allowBackup="true"
+    android:label="@string/app_name"
+    >
+
+    <activity android:name="com.ydky.vuandroidadsdk.activity.AdBrowserActivity"/>
+</application>
+
+</manifest>
+
